fix: 兼容长期有效候选口径配置